# Invariant-Generator

./: .gitignore  PLAN.md  PLAN_ADAPTIVE_ENCODER.md  README.md  pyproject.toml
configs/: adaptive_encoder_rotated_hill.toml  default.toml  rotated_hill_i11_sanity_pysr.toml  rotated_hill_pruned_pysr.toml
data/: hill.hdf  rotatedhill.hdf  vonMises100.hdf  vonMises25.hdf
notebooks/: adaptive_encoder_analysis.ipynb  analyze_training.ipynb  rotatedhill_analysis.md
scripts/: adaptive_encoder_pipeline.py  evaluate.py  prune_refit.py  rotatedhill_benchmark.py  train.py  train_pysr.py
src/invariant_generator/: __init__.py  adaptive.py  adaptive_symbolic.py  config.py  constraints.py  data.py  diagnostics.py  evaluation.py  formulas.py  invariants.py  losses.py  model.py  sparsify.py  symbolic.py  train.py  utils.py
tests/: test_adaptive.py  test_config.py  test_constraints.py  test_data.py  test_invariants.py  test_loss.py  test_model.py  test_symbolic.py  test_train.py
