[project]
name = "invariant-generator"
version = "0.1.0"
description = "PyTorch invariant-generator pipeline for yield-surface prediction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.11",
    "numpy>=2.0",
    "torch>=2.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
symbolic = [
    "pysr",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invariant_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
